[project]
name = "gamepoint"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kha Nguyen", email = "nlhkha@outlook.com" }
]
dependencies = [
    "streamlit>=1.39.0",
    "polars>=1.11.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.2",
    "altair>=5.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gamepoint"]
